updated to match java8
chged isBlank() to trim().isEmpty(), List.of() to Arrays.asList()